--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <script src="<script src="https://kit.fontawesome.com/f189ad2176.js" crossorigin="anonymous"></script>"
+    <script src="https://kit.fontawesome.com/f189ad2176.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="style.css" />
     <title>NAKAMOTO</title>
   </head>
@@ -36,14 +37,13 @@
 
     <div class="main-visual">
       <div class="main-visual-content">
-      <p class="main-visual-text">
-        The world is a book<br />
-      and those who do not travel<br />
-      read only one page.<br />
-    </p>
-
-      <p class="main-visual-name">St. Augustine</p>
-    </div>
+        <p class="main-visual-text">
+          The world is a book<br />
+          and those who do not travel<br />
+          read only one page.<br />
+        </p>
+        <p class="main-visual-name">St. Augustine</p>
+      </div>
     </div>
 
     <main>
@@ -90,7 +90,7 @@
                 </a>
               </h3>
               <p class="blog-date">june 16 2017</p>
-              <span class="category">Nature</span>
+              <span class="category">Adventure</span>
             </section>
           </div>
           <div class="blog-item">
@@ -123,14 +123,13 @@
           </div>
         </div>
         <div class="pagination">
-          <p>＜＜</p>
-          <p>＜</p>
+          <p><<</p>
+          <p><</p>
           <p>1</p>
           <p>2</p>
           <p>3</p>
-          <p>4</p>
-          <p>＞</p>
-          <p>＞＞</p>
+          <p>></p>
+          <p>>></p>
 
         </div>
         </section>
