--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f189ad2176.js" crossorigin="anonymous"></script>
-    
+
     <link rel="stylesheet" href="style.css" />
     <title>NAKAMOTO</title>
   </head>
